# VulkanEngine

./: .gitignore  CMakeLists.txt
shaders/src/: colored_mesh.frag  colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  input_structures.glsl  mesh.frag  mesh.vert  sky.comp  tex_image.frag
src/: camera.cpp  camera.h  core.h  main.cpp  pch.h  vk.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.cpp  vk_types.h
